force-app/main/default/objects/CTRNotification__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CTRUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To specify recipient and the notify to the user.</description>
        <label>CTR User</label>
        <referenceTo>CTRUser__c</referenceTo>
        <relationshipLabel>CTR Notification</relationshipLabel>
        <relationshipName>CTRNotification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate the message is already read.</description>
        <label>Is Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RedirectTo__c</fullName>
        <description>The custom redirect link unless specific the type of notification.</description>
        <label>RedirectTo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TargetId__c</fullName>
        <description>Target Salesforce Id to redirect when user click the message and the endpoint depends on type of notification.</description>
        <label>Target Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This message will display as a title of notification.</description>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of notification indicate the redirect link when user click the message.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdditionalInformation</fullName>
                    <label>Additional Information</label>
                </value>
                <value>
                    <fullName>AnnualReview</fullName>
                    <label>Annual Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTR Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CTRUser__c</columns>
        <columns>IsRead__c</columns>
        <columns>Body__c</columns>
        <columns>RedirectTo__c</columns>
        <columns>TargetId__c</columns>
        <columns>Title__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTR Notification Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>